# called-it

./: .debug-journal.md  .env.example  .env.staging.example  .gitignore  .railwayignore  AGENTS.md  Anchor.toml  CLAUDE.md  CONTRACTS.md  Cargo.toml  DESIGN.md  README.md  RELEASES.md  STAGING.md  escrow-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.base.json  tsconfig.product-copy.json  tsconfig.scripts.json  turbo.json  website-inspiration.md
config/: local-journey.example.json
docs/: PRD-called-it-mvp.md  callie-lifecycle-spec.md  callie-ux-overhaul.md  concept-brainstorm-2026-07-02.md  escrow-operations.md  escrow-threat-model.md  eve-concierge-plan.md  nl-intent-layer-spec.md  production-readiness-9-of-10-spec.md  rumble-bot-cutover.md  wager-feature-design.md
patches/: bigint-buffer@1.1.5.patch
programs/calledit-escrow/: Cargo.toml
programs/calledit-escrow/src/: constants.rs  encoding.rs  errors.rs  events.rs  lib.rs  math.rs
programs/calledit-escrow/src/instructions/: admin.rs  attestations.rs  claims.rs  market.rs  mod.rs  position.rs  settlement.rs
programs/calledit-escrow/src/state/: mod.rs
programs/calledit-escrow/tests/: foundation.rs
programs/calledit-escrow/tools/: generate-payout-differential.mjs
programs/calledit-escrow/vectors/: payout-differential-v1.json
reference/: audit-2026-07-02.md  track-consumer-and-fan-experiences.md  track-prediction-markets-and-settlement.md  track-trading-tools-and-agents.md  world-cup-hackathon-overview.md
scripts/: bootstrap-txline.ts  check-product-copy.fences.test.ts  check-product-copy.points.test.ts  check-product-copy.test-support.ts  check-product-copy.test.ts  check-product-copy.ts  check-telegram-evidence.test.ts  check-telegram-evidence.ts  check-workflow.test.ts  check-workflow.ts  cleanup-staging.ts  launch-calledit-local.mjs  local-journey-package.test.mjs  local-journey-profile.mjs  local-journey-profile.test.mjs  local-journey.mjs  local-stack-supervisor.mjs  local-stack-supervisor.test.mjs  product-copy-contract.ts  production-telegram-webhook.mjs  production-telegram-webhook.test.mjs  reconcile-beta.test.ts  (+24 more)
(+800 files in other folders)
