[workspace]
members = ["programs/calledit-escrow"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.84.1"

[workspace.dependencies]
# Anchor never published or tagged 0.31.2. Version 0.31.1 is the final
# official 0.31 release and its own lockfile pins this Solana/SPL family.
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1", default-features = false, features = ["associated_token", "token"] }
solana-program = "=2.1.0"
spl-associated-token-account = { version = "=6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
proptest = "=1.6.0"
serde_json = "=1.0.150"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
