[package]
name = "calledit-escrow"
version = "0.1.0"
description = "Called It per-market SOL and canonical USDC escrow program"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "calledit_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# Anchor SPL 0.31.1's IDL module unconditionally references token_interface;
# token_2022 is therefore enabled only for host-side IDL generation. Default
# program builds expose classic SPL token support only.
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "anchor-spl/token_2022"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
solana-curve25519.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
] }
